CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_Survey_Invitation__c/fields/Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Id__c</fullName>
    <description>FK to shadow Survey (SDO_Analytics_Survey__c.Survey_Id__c). Maps to ssot__SurveyId__c on ssot__SurveyInvitation__dlm.</description>
    <label>Survey Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>